filled recipe sites with content and images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h2>Lasagna</h2>
-    <a href="recipes/lasagna.html">Lecker Lasagna!</a>
+    <h2>List of tasty recipes</h2>
+    <ul>
+        <li><a href="recipes/lasagna.html">Delizioso Lasagna</a>
+        </li>
+        <li><a href="recipes/canned-tuna.html">Easy and delicious Canned Tuna</a></li>
+        <li><a href="recipes/hamburgers.html">Hamburgers are a classic</a></li>
+    </ul>
 </body>
 </html>
