--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna Recipe | Very Tasty!</title>
+    <title>Lasagna Recipe | Miles Em</title>
 </head>
 <body>
-    <h1>Mamma Mia!</h1>
+    <h1>Mamma Mia</h1>
+    <img src="../assets/cheesylasagnadish.jpg" alt="Woman holding a fork with a piece of Lasagna dripping with cheese" height="320" width="320">
+    <h2>This is a classic italian Dish and it's not that hard to make</h2>
 
     
 </body>
