added further content to the recipe pages

--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <h2>Welcome!</h2>
+    <p>Welcome to this humble website, where I will show you a couple of tasty recipes.</p>
+    <table>
+        <tr>
+          <td><a href="recipes/lasagna.html"><img src="assets/cheesylasagnadish.jpg" alt="Woman holding a fork with a piece of Lasagna dripping with cheese" height="150" width="150"></a></td>
+          <td><a href="recipes/hamburgers.html"><img src="assets/hamburger.jpg" alt="A hamburger on a wooden plate" height="150" width="150"></a></td>
+          <td><a href="recipes/canned-tuna.html"><img src="assets/canned-tuna.jpg" alt="A plate of canned tuna with vegetables and hard boiled eggs" height="150" width="150"></a></td>
+        </tr>
+      </table>
     <h2>List of tasty recipes</h2>
     <ul>
-        <li><a href="recipes/lasagna.html">Delizioso Lasagna</a>
+        <li><a href="recipes/lasagna.html">Delizioso Lasagne al forno</a>
         </li>
-        <li><a href="recipes/canned-tuna.html">Easy and delicious Canned Tuna</a></li>
-        <li><a href="recipes/hamburgers.html">Hamburgers are a classic</a></li>
+        <li><a href="recipes/hamburgers.html">Classic Hamburgers</a></li>
+        <li><a href="recipes/canned-tuna.html">Canned Tuna</a></li>
     </ul>
 </body>
 </html>
