--- a/recipes/canned-tuna.html
+++ b/recipes/canned-tuna.html
@@ -6,10 +6,73 @@
     <title>Canned Tuna Recipe | Miles Em</title>
 </head>
 <body>
-    <h1>Canned Tuna can't be beat</h1>
+    <h1>Canned Tuna</h1>
     <img src="../assets/canned-tuna.jpg" alt="A plate of canned tuna with vegetables and hard boiled eggs" height="320" width="320">
-    <h2>Canned Tuna is easy as ABC</h2>
+        <h2>Description</h2>
+            <p>Indulge in the delectable harmony of flavors with our savory canned tuna dish. Succulent pieces of premium tuna, packed with wholesome goodness and rich in omega-3 fatty acids, are the star of this culinary masterpiece. Imagine tender flakes of tuna, gently folded into a symphony of vibrant ingredients. Picture a medley of crisp vegetables, vibrant cherry tomatoes bursting with freshness, crunchy cucumbers, and tangy red onions, all delicately mingling together to create a burst of color and flavor. The addition of briny Kalamata olives adds a touch of Mediterranean flair, while fragrant basil leaves impart a subtle herbaceous note.</p>
 
-    
+    <h2>Shopping List</h2>
+    <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
+    <table>
+        <tr>
+            <td><img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="320" width="320"></td>
+            <td valign="top">
+                <ul>
+                    <li>Canned tuna</li>
+                    <li>Cherry tomatoes</li>
+                    <li>Cucumbers</li>
+                    <li>Red onions</li>
+                    <li>Kalamata olives</li>
+                    <li>Basil leaves</li>
+                    <li>Lemon</li>
+                    <li>Extra virgin olive oil</li>
+                    <li>Garlic</li>
+                    <li>Quinoa or whole-grain bread (optional)</li>
+                  </ul>
+         </tr>
+    </table>
+   
+
+
+    <h2>How To Prepare</h2>
+    <ol>
+        <li>Prepare the Dressing:
+          <ol>
+            <li>In a small bowl, whisk together freshly squeezed lemon juice, extra virgin olive oil, minced garlic, salt, and pepper. Set aside.</li>
+          </ol>
+        </li>
+        <li>Prepare the Salad Ingredients:
+          <ol>
+            <li>Slice the cherry tomatoes in half.</li>
+            <li>Dice the cucumbers and red onions.</li>
+            <li>Pit and halve the Kalamata olives.</li>
+            <li>Chiffonade the basil leaves.</li>
+          </ol>
+        </li>
+        <li>Assemble the Salad:
+          <ol>
+            <li>In a large mixing bowl, combine the canned tuna (drained), cherry tomatoes, cucumbers, red onions, Kalamata olives, and basil leaves.</li>
+          </ol>
+        </li>
+        <li>Dress the Salad:
+          <ol>
+            <li>Pour the prepared dressing over the salad ingredients.</li>
+            <li>Gently toss the salad until all ingredients are evenly coated with the dressing.</li>
+          </ol>
+        </li>
+        <li>Serve:
+          <ol>
+            <li>Serve the tuna salad atop a bed of fluffy quinoa or alongside slices of whole-grain bread.</li>
+            <li>Garnish with additional basil leaves if desired.</li>
+          </ol>
+        </li>
+        <li>Enjoy your refreshing and nutritious canned tuna salad!</li>
+      </ol>
+    <h3>See also</h3>
+    <ul>
+        <li> <a href="../index.html">Home</a> </li>
+        <li> <a href="lasagna.html">Delizioso Lasagne al forno</a> </li>
+        <li> <a href="hamburgers.html">Classic Hamburgers</a> </li>
+    </ul>    
 </body>
 </html>
