--- a/recipes/hamburgers.html
+++ b/recipes/hamburgers.html
@@ -3,12 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburgers Recipe | Miles Em</title>
+    <title>Hamburger Recipe | Miles Em</title>
 </head>
 <body>
-    <h1>American Classic</h1>
-    <h1>Canned Tuna can't be beat</h1>
+    <h1>Classic Hamburgers</h1>
     <img src="../assets/hamburger.jpg" alt="A hamburger on a wooden plate" height="320" width="320">
-    <h2>Hamburgers need no description. Everyone knows what they are. Goes well with a coke and fries</h2>
+        <h2>Description</h2>
+            <p>Prepare to embark on a culinary adventure with our mouthwatering hamburger creation, where every bite is a symphony of flavor and texture. At the heart of this culinary delight lies a juicy, handcrafted patty, expertly seasoned and grilled to perfection. Each bite reveals a tantalizing blend of savory beef, seared to a mouthwatering caramelized crust on the outside while remaining tender and succulent within.
+
+            Accompanying this star ingredient are layers of fresh, crisp vegetables, including crisp lettuce leaves, ripe tomato slices, and thinly sliced red onions, providing a burst of color and freshness with every bite. For an extra kick of flavor, we add a generous smear of tangy, house-made burger sauce, crafted from a secret blend of spices and condiments, lending a perfect balance of sweetness, tanginess, and umami richness.</p>
+
+    <h2>Ingredients</h2>
+    <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
+    <table>
+        <tr>
+            <td><img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="160" width="160"></td>
+            <td valign="top">
+                <ul>
+                    <li>Ground beef</li>
+                    <li>Lettuce leaves</li>
+                    <li>Tomato</li>
+                    <li>Red onion</li>
+                    <li>Burger buns</li>
+                    <li>Cheese (cheddar or mozzarella)</li>
+                    <li>Burger sauce ingredients (e.g., ketchup, mayonnaise, mustard, pickles)</li>
+                    <li>Optional toppings (such as avocado or caramelized onions)</li>
+                </ul>
+         </tr>
+    </table>
+   
+    <h2>How To Prepare</h2>
+    <ol>
+        <li>Prepare the Burger Patties:
+          <ol>
+            <li>Divide the ground beef into equal portions and shape them into patties.</li>
+            <li>Season the patties generously with salt and pepper on both sides.</li>
+            <li>Preheat a grill or skillet over medium-high heat.</li>
+            <li>Cook the patties for 3-4 minutes per side, or until they reach your desired level of doneness.</li>
+          </ol>
+        </li>
+        <li>Prepare the Burger Sauce:
+          <ol>
+            <li>In a small bowl, mix together ketchup, mayonnaise, mustard, and finely chopped pickles to create the burger sauce.</li>
+          </ol>
+        </li>
+        <li>Assemble the Hamburgers:
+          <ol>
+            <li>Toast the burger buns lightly on the grill or in a toaster.</li>
+            <li>Spread a generous amount of burger sauce on the bottom half of each bun.</li>
+            <li>Layer lettuce leaves, tomato slices, and red onion rings on top of the sauce.</li>
+            <li>Place the cooked burger patties on top of the vegetables.</li>
+            <li>Top each patty with a slice of cheese.</li>
+            <li>Optional: Add any additional toppings, such as avocado or caramelized onions.</li>
+            <li>Cover with the top half of the burger bun.</li>
+          </ol>
+        </li>
+        <li>Serve the hamburgers immediately, accompanied by your favorite side dishes like fries or salad. Enjoy!</li>
+      </ol>
+    <h3>See also</h3>
+    <ul>
+        <li> <a href="../index.html">Home</a> </li>
+        <li> <a href="lasagna.html">Delizioso Lasagne al forno</a> </li>
+        <li> <a href="canned-tuna.html">Canned Tuna</a> </li>
+    </ul>    
 </body>
 </html>
