--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,10 +6,89 @@
     <title>Lasagna Recipe | Miles Em</title>
 </head>
 <body>
-    <h1>Mamma Mia</h1>
+    <h1>Delizioso Lasagne al forno</h1>
     <img src="../assets/cheesylasagnadish.jpg" alt="Woman holding a fork with a piece of Lasagna dripping with cheese" height="320" width="320">
-    <h2>This is a classic italian Dish and it's not that hard to make</h2>
+        <h2>Description</h2>
+            <p>Step into a world of Italian culinary excellence with our irresistible lasagna, a timeless classic that promises to tantalize your taste buds with every layer. At the heart of this culinary masterpiece lies a rich and flavorful ragù sauce, simmered to perfection with a medley of aromatic herbs, tender ground beef, and tangy tomatoes, creating a symphony of savory goodness.
 
-    
+            Layer upon layer of delicate lasagna noodles, cooked to al dente perfection, intertwine with velvety béchamel sauce, adding a creamy richness that blankets each bite in luxurious indulgence. Between each layer, a generous scattering of creamy ricotta cheese awaits, lending a luscious texture and a hint of subtle sweetness to the ensemble.</p>
+    <h2>Ingredients</h2>
+    <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
+    <table>
+        <tr>
+            <td><img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="320" width="320"></td>
+            <td valign="top">
+                <ul>
+                    <li>Ground beef</li>
+                    <li>Ricotta cheese</li>
+                    <li>Mozzarella cheese</li>
+                    <li>Parmesan cheese</li>
+                    <li>Fresh spinach leaves</li>
+                    <li>Mushrooms</li>
+                    <li>Garlic</li>
+                    <li>Onion</li>
+                    <li>Tomato (for sauce)</li>
+                    <li>Fresh herbs (such as basil, oregano, or parsley)</li>
+                    <li>Lasagna noodles</li>
+                    <li>Olive oil</li>
+                    <li>Tomato sauce or canned tomatoes</li>
+                    <li>All-purpose flour (for béchamel sauce)</li>
+                    <li>Butter (for béchamel sauce)</li>
+                    <li>Milk (for béchamel sauce)</li>
+                    <li>Dried herbs and spices (such as salt, pepper, Italian seasoning)</li>
+                    <li>Red wine (optional, for deglazing and flavoring the sauce)</li>
+                    <li>Crushed red pepper flakes (optional, for added heat)</li>
+                    <li>Breadcrumbs (optional, for topping)</li>
+                  </ul>
+                  
+         </tr>
+    </table>
+   
+
+
+    <h2>How To</h2>
+    <ol>
+        <li>Preheat the oven to 375°F (190°C).</li>
+        <li>Prepare the ragù sauce:
+          <ol>
+            <li>Heat olive oil in a large skillet over medium heat.</li>
+            <li>Add chopped onions and minced garlic, sauté until softened.</li>
+            <li>Add ground beef and cook until browned, breaking it up with a spatula.</li>
+            <li>Stir in diced tomatoes or tomato sauce, along with red wine if using.</li>
+            <li>Season with salt, pepper, and dried herbs (such as basil and oregano).</li>
+            <li>Simmer the sauce for 20-30 minutes, stirring occasionally, until thickened.</li>
+          </ol>
+        </li>
+        <li>Prepare the béchamel sauce:
+          <ol>
+            <li>Melt butter in a saucepan over medium heat.</li>
+            <li>Whisk in all-purpose flour until smooth to create a roux.</li>
+            <li>Gradually whisk in milk until the sauce thickens and coats the back of a spoon.</li>
+            <li>Season with salt, pepper, and a pinch of nutmeg if desired.</li>
+            <li>Remove from heat and set aside.</li>
+          </ol>
+        </li>
+        <li>Cook the lasagna noodles according to package instructions until al dente.</li>
+        <li>Assemble the lasagna:
+          <ol>
+            <li>Spread a thin layer of ragù sauce on the bottom of a baking dish.</li>
+            <li>Arrange a layer of cooked lasagna noodles on top of the sauce.</li>
+            <li>Spread a layer of ricotta cheese over the noodles, followed by a layer of spinach and mushrooms.</li>
+            <li>Pour a layer of béchamel sauce over the vegetables.</li>
+            <li>Sprinkle with shredded mozzarella and grated Parmesan cheese.</li>
+            <li>Repeat the layers until all ingredients are used, ending with a layer of sauce and cheese on top.</li>
+          </ol>
+        </li>
+        <li>Cover the baking dish with foil and bake in the preheated oven for 30-40 minutes.</li>
+        <li>Remove the foil and bake for an additional 10-15 minutes, or until the cheese is bubbly and golden brown.</li>
+        <li>Let the lasagna cool for a few minutes before serving. Garnish with fresh basil or parsley if desired.</li>
+        <li>Enjoy your delicious homemade lasagna!</li>
+      </ol>
+    <h3>See also</h3>
+    <ul>
+        <li> <a href="../index.html">Home</a> </li>
+        <li> <a href="hamburgers.html">Classic Hamburgers</a> </li>
+        <li> <a href="canned-tuna.html">Canned Tuna</a> </li>
+    </ul>    
 </body>
 </html>
