small wording corrections

--- a/recipes/hamburgers.html
+++ b/recipes/hamburgers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburger Recipe | Miles Em</title>
+    <title>Classic Hamburgers Recipe | Miles Em</title>
 </head>
 <body>
     <h1>Classic Hamburgers</h1>
