--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna Recipe | Miles Em</title>
+    <title>Delizioso Lasagne al forno Recipe | Miles Em</title>
 </head>
 <body>
     <h1>Delizioso Lasagne al forno</h1>
