small h2 wording corrections

--- a/recipes/hamburgers.html
+++ b/recipes/hamburgers.html
@@ -13,7 +13,7 @@
 
             Accompanying this star ingredient are layers of fresh, crisp vegetables, including crisp lettuce leaves, ripe tomato slices, and thinly sliced red onions, providing a burst of color and freshness with every bite. For an extra kick of flavor, we add a generous smear of tangy, house-made burger sauce, crafted from a secret blend of spices and condiments, lending a perfect balance of sweetness, tanginess, and umami richness.</p>
 
-    <h2>Ingredients</h2>
+    <h2>Shopping List</h2>
     <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
     <table>
         <tr>
