--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
             <p>Step into a world of Italian culinary excellence with our irresistible lasagna, a timeless classic that promises to tantalize your taste buds with every layer. At the heart of this culinary masterpiece lies a rich and flavorful ragù sauce, simmered to perfection with a medley of aromatic herbs, tender ground beef, and tangy tomatoes, creating a symphony of savory goodness.
 
             Layer upon layer of delicate lasagna noodles, cooked to al dente perfection, intertwine with velvety béchamel sauce, adding a creamy richness that blankets each bite in luxurious indulgence. Between each layer, a generous scattering of creamy ricotta cheese awaits, lending a luscious texture and a hint of subtle sweetness to the ensemble.</p>
-    <h2>Ingredients</h2>
+    <h2>Shopping List</h2>
     <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
     <table>
         <tr>
@@ -43,10 +43,8 @@
                   
          </tr>
     </table>
-   
 
-
-    <h2>How To</h2>
+    <h2>How To Prepare</h2>
     <ol>
         <li>Preheat the oven to 375°F (190°C).</li>
         <li>Prepare the ragù sauce:
@@ -84,6 +82,7 @@
         <li>Let the lasagna cool for a few minutes before serving. Garnish with fresh basil or parsley if desired.</li>
         <li>Enjoy your delicious homemade lasagna!</li>
       </ol>
+      
     <h3>See also</h3>
     <ul>
         <li> <a href="../index.html">Home</a> </li>
