removed table and moved the notepad image above the list

--- a/recipes/canned-tuna.html
+++ b/recipes/canned-tuna.html
@@ -12,11 +12,8 @@
             <p>Indulge in the delectable harmony of flavors with our savory canned tuna dish. Succulent pieces of premium tuna, packed with wholesome goodness and rich in omega-3 fatty acids, are the star of this culinary masterpiece. Imagine tender flakes of tuna, gently folded into a symphony of vibrant ingredients. Picture a medley of crisp vegetables, vibrant cherry tomatoes bursting with freshness, crunchy cucumbers, and tangy red onions, all delicately mingling together to create a burst of color and flavor. The addition of briny Kalamata olives adds a touch of Mediterranean flair, while fragrant basil leaves impart a subtle herbaceous note.</p>
 
     <h2>Shopping List</h2>
-    <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
-    <table>
-        <tr>
-            <td><img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="320" width="320"></td>
-            <td valign="top">
+     <img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="160" width="160">
+        <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
                 <ul>
                     <li>Canned tuna</li>
                     <li>Cherry tomatoes</li>
@@ -28,11 +25,7 @@
                     <li>Extra virgin olive oil</li>
                     <li>Garlic</li>
                     <li>Quinoa or whole-grain bread (optional)</li>
-                  </ul>
-         </tr>
-    </table>
-   
-
+                </ul>
 
     <h2>How To Prepare</h2>
     <ol>
