--- a/recipes/hamburgers.html
+++ b/recipes/hamburgers.html
@@ -14,11 +14,8 @@
             Accompanying this star ingredient are layers of fresh, crisp vegetables, including crisp lettuce leaves, ripe tomato slices, and thinly sliced red onions, providing a burst of color and freshness with every bite. For an extra kick of flavor, we add a generous smear of tangy, house-made burger sauce, crafted from a secret blend of spices and condiments, lending a perfect balance of sweetness, tanginess, and umami richness.</p>
 
     <h2>Shopping List</h2>
-    <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
-    <table>
-        <tr>
-            <td><img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="160" width="160"></td>
-            <td valign="top">
+        <img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="160" width="160">
+             <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
                 <ul>
                     <li>Ground beef</li>
                     <li>Lettuce leaves</li>
@@ -29,9 +26,7 @@
                     <li>Burger sauce ingredients (e.g., ketchup, mayonnaise, mustard, pickles)</li>
                     <li>Optional toppings (such as avocado or caramelized onions)</li>
                 </ul>
-         </tr>
-    </table>
-   
+                
     <h2>How To Prepare</h2>
     <ol>
         <li>Prepare the Burger Patties:
