--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,11 +13,8 @@
 
             Layer upon layer of delicate lasagna noodles, cooked to al dente perfection, intertwine with velvety béchamel sauce, adding a creamy richness that blankets each bite in luxurious indulgence. Between each layer, a generous scattering of creamy ricotta cheese awaits, lending a luscious texture and a hint of subtle sweetness to the ensemble.</p>
     <h2>Shopping List</h2>
+    <img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="160" width="160">
     <p>Take out your pen and paper or your favorite notetaking App and jot this down. You'll need:</p>
-    <table>
-        <tr>
-            <td><img src="../assets/notebook-with-pen.jpg" alt="A notebook with a pen" height="320" width="320"></td>
-            <td valign="top">
                 <ul>
                     <li>Ground beef</li>
                     <li>Ricotta cheese</li>
@@ -40,9 +37,6 @@
                     <li>Crushed red pepper flakes (optional, for added heat)</li>
                     <li>Breadcrumbs (optional, for topping)</li>
                   </ul>
-                  
-         </tr>
-    </table>
 
     <h2>How To Prepare</h2>
     <ol>
@@ -82,7 +76,7 @@
         <li>Let the lasagna cool for a few minutes before serving. Garnish with fresh basil or parsley if desired.</li>
         <li>Enjoy your delicious homemade lasagna!</li>
       </ol>
-      
+
     <h3>See also</h3>
     <ul>
         <li> <a href="../index.html">Home</a> </li>
